--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -1,18 +1,41 @@
-<nav class="flex items-center justify-between flex-wrap px-5 py-3 border-b">
-  <a href="/" class="font-semibold text-xl tracking-tight">My Page</a>
+<nav id="header" class="fixed w-full z-30 top-0 text-white">
+    <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
+      <div class="pl-4 flex items-center">
+        <a href="/" class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">LaunchLead</a>
+        <a href="/" class="font-semibold text-xl tracking-tight">Launchlead</a>
+      </div>
 
-  {% set navPages = collections.all | eleventyNavigation %}
-  <ul>
-    {% for entry in navPages %}
-      <li class="inline">
-        <a
-         href="{{ entry.url }}"
-         class="uppercase text-sm py-1 px-2 rounded mr-4 inline-block
-         {{'bg-black text-white' if entry.url in page.url
-         else 'text-gray-700 hover:text-gray-900'}}">
-         {{ entry.title }}
-       </a>
-      </li>
-    {% endfor %}
- </ul>
+      <div class="block lg:hidden pr-4">
+        <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+          Menu
+        </button>
+      </div>
+
+      {% set navPages = collections.all | eleventyNavigation %}
+      <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
+        <ul class="list-reset lg:flex justify-end flex-1 items-center">
+
+          {% for entry in navPages %}
+            <li class="inline">
+              <a
+                href="{{ entry.url }}"
+                class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4
+                {{'inline-block py-2 px-4 text-black font-bold no-underline' if entry.url in page.url
+                else 'text-gray-700 hover:text-gray-900'}}">
+                {{ entry.title }}
+              </a>
+            </li>
+          {% endfor %}
+
+        </ul>
+        <button
+            id="navAction"
+            class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+            Action
+          </button>
+      </div>
+    </div>
+
+    <hr class="border-b border-gray-100 opacity-25 my-0 py-0"/>
+  </div>
 </nav>
