--- a/src/pages/contact.njk
+++ b/src/pages/contact.njk
@@ -4,10 +4,10 @@ layout: layouts/base.njk
 permalink: /contact/
 eleventyNavigation:
   key: Contact
-  order: 1
+  order: 2
 ---
 
-<ul>
+<ul class="pt-24">
      {% for item in contact.items %}
      <li><a href="{{ item.link }}">{{ item.name }}</a></li>
      {% endfor %}
