--- a/src/pages/work.njk
+++ b/src/pages/work.njk
@@ -4,9 +4,9 @@ layout: layouts/base.njk
 permalink: /work/
 eleventyNavigation:
   key: Work
-  order: 0
+  order: 1
 ---
-
+<div class="pt-24">
 <p>Your awesome content goes here.</p>
-
+</div>
 <img class="mt-8" src="/img/example-image.jpg" alt="">
