--- a/src/pages/contact.njk
+++ b/src/pages/contact.njk
@@ -1,16 +1,20 @@
 ---
-title: Contact
+title: About
 layout: layouts/base.njk
-permalink: /contact/
+permalink: /about/
 eleventyNavigation:
-  key: Contact
-  order: 2
+  key: About
+  order: 1
 ---
 
 <ul class="pt-24">
-     {% for item in contact.items %}
-     <li><a href="{{ item.link }}">{{ item.name }}</a></li>
-     {% endfor %}
+  {% for item in contact.items %}
+    <li>
+      <a href="{{ item.link }}">{{ item.name }}</a>
+    </li>
+  {% endfor %}
 </ul>
 
-<p class="mt-4">☝️ This page gets its content from <code>src/_data/contact.json</code></p>
+<p class="mt-4">
+  ☝️ This page gets its content from <code>src/_data/contact.json</code>
+</p>
