--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,6 +8,7 @@
         background: linear-gradient(90deg, #ff5a0b 0%, #ffad00 100%);
       }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body class="leading-normal tracking-normal text-white h-14 bg-gradient-to-r to-cyan-500 from-launchlead-blue" style="font-family: 'Source Sans Pro', sans-serif;">
