--- a/src/index.njk
+++ b/src/index.njk
@@ -93,7 +93,7 @@ permalink: /
 
   <div class="flex flex-wrap flex-col-reverse md:flex-row">
     <div class="w-full md:w-1/2 p-6 mt-6 items-center text-center px-16">
-      <img class="max-w-xs opacity-70 m-auto" src="/img/no-ball-thrower-needed.png">
+      <img class="w-fit opacity-70 m-auto" src="/img/no-ball-thrower-needed.png">
     </div>
 
     <div class="w-full md:w-1/2 p-6 mt-6">
