--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -21,21 +21,48 @@
     </div>
 
     <div class="block lg:hidden pr-4">
-      <button id="nav-toggle" class="font-bold flex items-center p-1 text-white hover:underline focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out ">
+      <button id="nav-toggle" class="font-bold
+        flex
+        items-center
+        p-1
+        text-white
+        hover:underline
+        focus:outline-none
+        focus:shadow-outline
+        transform
+        transition
+        hover:scale-105
+        duration-300
+        ease-in-out ">
         Menu
       </button>
     </div>
 
     {% set navPages = collections.all | eleventyNavigation %}
-    <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-white p-4 lg:p-0 z-20" id="nav-content">
-      <ul class="list-reset lg:flex justify-end flex-1 items-center">
+    <div class="
+      w-full
+      flex-grow
+      lg:flex
+      lg:items-center
+      lg:w-auto
+      hidden
+      mt-2
+      lg:mt-0
+      bg-white
+      lg:bg-transparent
+      text-white
+      p-4
+      lg:p-0
+      z-20"
+      id="nav-content">
+      <ul class="list-reset lg:flex justify-end flex-1 items-center" id='navLinks'>
 
         {% for entry in navPages %}
-            <li class="inline">
+            <li class="text-right">
               <a
                 href="{{ entry.url }}"
-                class="toggleColour font-bold inline-block hover:font-bold hover:text-underline py-2 px-4
-                {{'inline-block py-2 px-4 text-white font-bold cursor-default'
+                class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white
+                {{'inline-block py-2 px-4 font-bold cursor-default'
                 if entry.url in page.url
                 else 'underline hover:scale-110'}}">
                 {{ entry.title }}
@@ -44,7 +71,7 @@
         {% endfor %}
       </ul>
 
-      <button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+      <button id="navAction" class="float-right mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
         Amazon
       </button>
     </div>
