--- a/src/index.njk
+++ b/src/index.njk
@@ -12,7 +12,7 @@ permalink: /
   <div class="container px-4 mx-auto flex flex-wrap flex-col lg:flex-row items-center">
 
     <!--Left Col-->
-    <div class="lg:pl-4 flex flex-col w-full lg:w-2/5 justify-center items-start text-center lg:text-left">
+    <div class="lg:pl-4 flex flex-col w-full lg:w-2/4 justify-center items-start text-center lg:text-left">
       {# <p class="uppercase tracking-loose w-full">Unleash the fun</p> #}
       <h1 class="w-full my-4 text-4xl font-bold leading-tight text-center lg:text-left">
         A dog lead &amp; ball thrower in one!
@@ -38,7 +38,7 @@ permalink: /
   </div>
 
   <!--Right Col-->
-  <div class="lg:w-3/5">
+  <div class="lg:w-2/4 ">
     <img class="lg:mt-20 mx-auto text-center" src="/img/hero-banner-product.png" alt="">
   </div>
 </div>
@@ -86,7 +86,7 @@ permalink: /
 
     <div class="w-full md:w-1/2 p-6">
       <div class="w-full md:h-64 mx-auto">
-        <iframe class="video" style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/msizPweg3kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
+        <iframe style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/dKrWeemEELc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
   </div>
