--- a/src/index.njk
+++ b/src/index.njk
@@ -86,7 +86,7 @@ permalink: /
 
     <div class="w-full md:w-1/2 p-6">
       <div class="w-full md:h-64 mx-auto">
-        <iframe style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/dKrWeemEELc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/d3usfMTfy9Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
   </div>
