Add layout and video

--- a/src/index.njk
+++ b/src/index.njk
@@ -72,7 +72,7 @@ permalink: /
   </div>
 
   <div class="flex flex-wrap">
-    <div class="w-5/6 md:w-1/2 p-6">
+    <div class="md:w-1/2 p-6">
       <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
           See it in action
         </h3>
@@ -86,19 +86,19 @@ permalink: /
 
     <div class="w-full md:w-1/2 p-6">
       <div class="w-full md:h-64 mx-auto">
-        <iframe style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/d3usfMTfy9Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/XcwZN0Dg1bI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
   </div>
 
   <div class="flex flex-wrap flex-col-reverse md:flex-row">
-    <div class="w-full md:w-1/2 p-6 mt-6 items-center text-center px-16">
-      <img class="w-fit opacity-70 m-auto" src="/img/no-ball-thrower-needed.png">
+    <div class="w-full md:w-1/2 pt-0 sm:p-6 mt-0 sm:mt-6 items-center text-center px-16">
+      <img class="w-fit opacity-70 m-auto" src="/img/no-ball-thrower-needed.png" style="max-width: 300px;">
     </div>
 
     <div class="w-full md:w-1/2 p-6 mt-6">
       <div class="align-middle">
-        <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+        <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3 text-center lg:text-left">
             Carry less, play more
           </h3>
         <p>About this item<p>
@@ -219,7 +219,7 @@ permalink: /
       <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
     </div>
     <div class="flex flex-col sm:flex-row justify-center pt-12 my-12 sm:my-4">
-      <div class="flex flex-col w-5/6 lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
+      <div class="flex flex-col lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
         <div class="flex-1 bg-white text-gray-600 rounded-t rounded-b-none overflow-hidden shadow">
           <div class="p-8 text-3xl font-bold text-center border-b-4">
                 Free
@@ -242,7 +242,7 @@ permalink: /
           </div>
         </div>
       </div>
-      <div class="flex flex-col w-5/6 lg:w-1/3 mx-auto lg:mx-0 rounded-lg bg-white mt-4 sm:-mt-6 shadow-lg z-10">
+      <div class="flex flex-col lg:w-1/3 mx-auto lg:mx-0 rounded-lg bg-white mt-4 sm:-mt-6 shadow-lg z-10">
         <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
           <div class="w-full p-8 text-3xl font-bold text-center">Basic</div>
           <div class="h-1 w-full gradient my-0 py-0 rounded-t"></div>
@@ -265,7 +265,7 @@ permalink: /
           </div>
         </div>
       </div>
-      <div class="flex flex-col w-5/6 lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
+      <div class="flex flex-col lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
         <div class="flex-1 bg-white text-gray-600 rounded-t rounded-b-none overflow-hidden shadow">
           <div class="p-8 text-3xl font-bold text-center border-b-4">
                 Pro
