--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -23,12 +23,12 @@ eleventyNavigation:
   </svg>
 
   <!--Titled section-->
-  <section class="bg-white border-b py-8 flex">
-    <div class="container max-w-5xl mx-auto m-8">
+  <section class="bg-white border-b py-4 flex">
+    <div class="container max-w-5xl mx-auto">
       <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800 m-auto">
         About LaunchLead Ltd
       </h2>
-      <p class="w-full text-gray-600 text-xl max-w-prose  my-2 mx-auto text-center">
+      <p class="w-full text-gray-600 text-xl max-w-prose p-4 my-2 mx-auto text-center">
         A family run business that started during the pandemic, LaunchLead Ltd is a UK based company selling our patented dog leads around the world.
         Our design allows for the ball to be thrown up to 50 meters while reducing the stress on your shoulders.
       </p>
@@ -39,12 +39,12 @@ eleventyNavigation:
 
       {# text left #}
       <div class="flex flex-wrap">
-        <div class="w-5/6 sm:w-1/2 p-6">
+        <div class="sm:w-1/2 p-6">
           <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
             A new family member
           </h3>
 
-          <p class="text-gray-600 mb-8 text-base max-w-prose">
+          <p class="text-gray-600 text-base max-w-prose">
             During the pandemic, the loss of a beloved grandfather meant that we welcomed a new member into our small family. Luna, a two year old Docker Spaniel, 
           </p>
         </div>
@@ -63,7 +63,7 @@ eleventyNavigation:
         <div class="w-full sm:w-1/2 p-6 mt-6">
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Luna settled in</h3>
-            <p class="text-gray-600 mb-8">
+            <p class="text-gray-600">
               Finding our way together, Luna was clearly and engetic dog. Like most dogs she loved chasing a ball and fetch soon became the most played game in our house. 
             </p>
           </div>
@@ -72,12 +72,12 @@ eleventyNavigation:
 
       {# text left #}
       <div class="flex flex-wrap">
-        <div class="w-5/6 sm:w-1/2 p-6">
+        <div class="sm:w-1/2 p-6">
           <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
             An injury
           </h3>
 
-          <p class="text-gray-600 mb-8 text-base max-w-prose">
+          <p class="text-gray-600 text-base max-w-prose">
             Unfortunatly I suffered a should injury a few months after Luna arrive. The pain was at its worst when raising my hands above shoulder height. This made it very painfull to use a traditional ball thrower. So I started experimenting with other ideas.
           </p>
         </div>
@@ -97,7 +97,7 @@ eleventyNavigation:
         <div class="w-full sm:w-1/2 p-6 mt-6">
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">The prototypes</h3>
-            <p class="text-gray-600 mb-8">
+            <p class="text-gray-600">
               There were many prototypes. I used off the shelf leads at first. I'd cut different length cradles (thats the part where the tennis ball sits before it is throw) in them to see which worked best with a tennisball. I also experimented with different lenght leads. Some were glued, some were taped and some were even melted together. Eventualy I had engouh details to approach manfacturers and get samples produced. The best part being that Luna was happy to help me test each iteration.
             </p>
           </div>
