--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -29,12 +29,13 @@
         See it in action or head to Amazon?
       </h3>
 
+    <button class="mx-auto mr-4 lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+      How to use it
+    </button>
+
     <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-        How to use it
-      </button>
-    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-        Amazon
-      </button>
+      Amazon
+    </button>
   </section>
 
 <!--Footer-->
