--- a/src/pages/unleash.njk
+++ b/src/pages/unleash.njk
@@ -23,8 +23,8 @@ eleventyNavigation:
   </svg>
 
   <!--Titled section-->
-  <section class="bg-white py-8 flex">
-    <div class="container max-w-5xl mx-auto m-8">
+  <section class="bg-white py-4 flex">
+    <div class="container max-w-5xl mx-auto">
       <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
         How to throw
       </h2>
@@ -35,61 +35,12 @@ eleventyNavigation:
 
       {# text left #}
       <div class="flex flex-wrap">
-        <div class="w-5/6 sm:w-1/2 p-6">
+        <div class="sm:w-1/2 p-6">
           <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
             Watch the tutorial
           </h3>
 
-          <p class="text-gray-600 mb-8 text-base max-w-prose">
-            Our patented design allow for the ball to be thrown up to 50 meters. All while reducing the stress on the shoulders.
-            <br/>
-            <br/>
-            See it in action now
-          </p>
-        </div>
-
-        <div class="w-full sm:w-1/2 p-6 mt-6">
-          <div class="w-full sm:h-64 mx-auto">
-            <iframe class="video" style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/msizPweg3kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-
-            <h2 class="w-full my-2 text-4xl font-bold leading-tight text-center text-gray-800">
-        Step by step tutorial
-      </h2>
-
-      <div class="w-full mb-4">
-        <div class="h-1 mx-auto gradient w-64 my-0 py-0 rounded-t"></div>
-      </div>
-
-
-      {# text right #}
-      <div class="flex flex-wrap flex-col-reverse sm:flex-row">
-        <div class="w-full sm:w-1/2 p-6 mt-6">
-          <div class="w-full sm:h-64 mx-auto">
-            <iframe class="video" style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/msizPweg3kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
-          </div>
-        </div>
-
-        <div class="w-full sm:w-1/2 p-6 mt-6">
-          <div class="align-middle">
-            <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Step One</h3>
-            <p class="text-gray-600 mb-8">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      {# text left #}
-      <div class="flex flex-wrap">
-        <div class="w-5/6 sm:w-1/2 p-6">
-          <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-            Step Two
-          </h3>
-
-          <p class="text-gray-600 mb-8 text-base max-w-prose">
+          <p class="text-gray-600 text-base max-w-prose">
             Our patented design allow for the ball to be thrown up to 50 meters. All while reducing the stress on the shoulders.
             <br/>
             <br/>
@@ -98,22 +49,67 @@ eleventyNavigation:
         </div>
 
         <div class="w-full sm:w-1/2 p-6">
-          <img src="img/lead-crop-1.jpg">
+          <div class="w-full sm:h-64 mx-auto">
+            <iframe class="video" style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/msizPweg3kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="w-full mt-6 mb-2 text-4xl font-bold leading-tight text-center text-gray-800">
+        Step by step tutorial
+      </h2>
+
+      <div class="w-full mb-4 mt-4">
+        <div class="h-1 mx-auto gradient w-64 my-0 py-0 rounded-t"></div>
+      </div>
+
+
+      {# text right #}
+      <div class="flex flex-wrap flex-col-reverse sm:flex-row">
+        <div class="w-full sm:w-1/2 p-6">
+          <img src="/img/luna-blue-leaves-crop.jpg">
+        </div>
+
+        <div class="w-full sm:w-1/2 p-6 mt-6">
+          <div class="align-middle">
+            <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Step One</h3>
+            <p class="text-gray-600">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      {# text left #}
+      <div class="flex flex-wrap">
+        <div class="sm:w-1/2 p-6">
+          <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+            Step Two
+          </h3>
+
+          <p class="text-gray-600 text-base max-w-prose">
+            Our patented design allow for the ball to be thrown up to 50 meters. All while reducing the stress on the shoulders.
+            <br/>
+            <br/>
+            See it in action now
+          </p>
+        </div>
+
+        <div class="w-full sm:w-1/2 p-6">
+          <img src="/img/luna-blue-leaves-crop.jpg">
         </div>
       </div>
 
       {# text right #}
       <div class="flex flex-wrap flex-col-reverse sm:flex-row">
-        <div class="w-full sm:w-1/2 p-6 mt-6">
-          <div class="w-full sm:h-64 mx-auto">
-            <iframe class="video" style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/msizPweg3kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
-          </div>
+        <div class="w-full sm:w-1/2 p-6">
+          <img src="/img/luna-blue-leaves-crop.jpg">
         </div>
 
         <div class="w-full sm:w-1/2 p-6 mt-6">
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Step Three</h3>
-            <p class="text-gray-600 mb-8">
+            <p class="text-gray-600">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
             </p>
           </div>
