--- a/src/index.njk
+++ b/src/index.njk
@@ -32,9 +32,9 @@ permalink: /
         The Launchlead is a dog lead that can throw a tennis ball up to 50 meters, reduce should stress and let you play more with your furry friend.
       </p>
 
-    <button class="mx-auto lg:mx-0 hover:underline text-white font-bold rounded-full mb-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out gradient">
+    <a href="#test" class="mx-auto lg:mx-0 hover:underline text-white font-bold rounded-full mb-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out gradient" href="#test">
         See it in action
-      </button>
+      </a>
   </div>
 
   <!--Right Col-->
@@ -45,7 +45,7 @@ permalink: /
 </div>
 
 <!--Section Break-->
-<div class="relative -mt-12 lg:-mt-24">
+<div class="relative">
 <svg viewBox="0 0 1428 174" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
     <g transform="translate(-2.000000, 44.000000)" fill="#FFFFFF" fill-rule="nonzero">
@@ -62,64 +62,62 @@ permalink: /
 
 <!--Titled section-->
 <section class="bg-white py-8">
-<div class="container max-w-5xl mx-auto m-8">
-  <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
+  <div class="container max-w-5xl mx-auto m-8">
+    <h2 id="test" class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
       Unleash the fun
     </h2>
 
-  <div class="w-full mb-4">
-    <div class="h-1 mx-auto gradient w-64 my-0 py-0 rounded-t"></div>
-  </div>
+    <div class="w-full mb-8">
+      <div class="h-1 mx-auto gradient w-64 my-0 py-0 rounded-t"></div>
+    </div>
 
-  <div class="flex flex-wrap">
-    <div class="md:w-1/2 p-6">
-      <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+    <div class="flex flex-wrap">
+      <div class="md:w-1/2 p-6">
+        <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
           See it in action
         </h3>
+        <h2 id="test" class="scroll-mt-20">Syntax</h2>
 
-      <p class="text-gray-600">
+        <p class="text-gray-600">
           Our patent pending design allows for the ball to be thrown up to 50 meters. It also reduces stress on the shoulders when throwing.
-
-          See it in action now!
         </p>
-    </div>
-
-    <div class="w-full md:w-1/2 p-6">
-      <div class="w-full md:h-64 mx-auto">
-        <iframe style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/XcwZN0Dg1bI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
-    </div>
-  </div>
 
-  <div class="flex flex-wrap flex-col-reverse md:flex-row">
-    <div class="w-full md:w-1/2 pt-0 sm:p-6 mt-0 sm:mt-6 items-center text-center px-16">
-      <img class="w-fit opacity-70 m-auto" src="/img/no-ball-thrower-needed.png" style="max-width: 300px;">
-    </div>
-
-    <div class="w-full md:w-1/2 p-6 mt-6">
-      <div class="align-middle">
-        <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3 text-center lg:text-left">
-            Carry less, play more
-          </h3>
-        <p>About this item<p>
-            <ul class=" text-gray-800 mb-8 md:ml-8 text-center md:text-left lg:list-disc">
-              <li class="mb-3">
-                <strong>Throw away your thrower </strong> - Using a LaunchLead means no need to take an additional ball thrower, recycle it and use a lead that can throw as well. Thats one less thing to carry.</li>
-              <li class="mb-3">
-                <strong>Throw further and higher </strong> - Throw the ball further or higher than ever before for your Furry Friend. While being easier on shoulders.</li>
-              <li class="mb-3">
-                <strong>Durable Nylon Webbing </strong> - Made of long lasting, durable, high-density, strong Nylon webbing.</li>
-              <li class="mb-3">
-                <strong>Comfortable Padded Handle </strong> - The handle is padded with Neoprene making it soft and comfortable, protecting your hands.</li>
-              <li class="mb-3">
-                <strong>Highly Reflective Stripes </strong> - The reflective design enables high visibility in the dark, which is safer for you and your dog.</li>
-            </ul>
-
-          </div>
+      <div class="w-full md:w-1/2 p-6">
+        <div class="w-full md:h-64 mx-auto">
+          <iframe style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/XcwZN0Dg1bI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </div>
     </div>
-  </section>
+
+    <div class="flex flex-wrap flex-col-reverse md:flex-row">
+      <div class="w-full md:w-1/2 pt-0 sm:p-6 mt-0 sm:mt-6 items-center text-center px-16">
+        <img class="w-fit opacity-70 m-auto" src="/img/no-ball-thrower-needed.png" style="max-width: 300px;">
+      </div>
+
+      <div class="w-full md:w-1/2 p-6 mt-6">
+        <div class="align-middle">
+          <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3 text-center lg:text-left">
+              Carry less, play more
+          </h3>
+          <p>About this item<p>
+          <ul class=" text-gray-800 mb-8 md:ml-8 text-center md:text-left lg:list-disc">
+            <li class="mb-3">
+              <strong>Throw away your thrower </strong> - Using a LaunchLead means no need to take an additional ball thrower, recycle it and use a lead that can throw as well. Thats one less thing to carry.</li>
+            <li class="mb-3">
+              <strong>Throw further and higher </strong> - Throw the ball further or higher than ever before for your Furry Friend. While being easier on shoulders.</li>
+            <li class="mb-3">
+              <strong>Durable Nylon Webbing </strong> - Made of long lasting, durable, high-density, strong Nylon webbing.</li>
+            <li class="mb-3">
+              <strong>Comfortable Padded Handle </strong> - The handle is padded with Neoprene making it soft and comfortable, protecting your hands.</li>
+            <li class="mb-3">
+              <strong>Highly Reflective Stripes </strong> - The reflective design enables high visibility in the dark, which is safer for you and your dog.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
   {# <section class="bg-white  py-8">
       <div class="container mx-auto flex flex-wrap pt-4 pb-12">
@@ -127,7 +125,7 @@ permalink: /
       Title
     </h2>
 
-        <div class="w-full mb-4">
+        <div class="w-full mb-8">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
 
@@ -215,7 +213,7 @@ permalink: /
     <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
           Pricing
         </h2>
-    <div class="w-full mb-4">
+    <div class="w-full mb-8">
       <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
     </div>
     <div class="flex flex-col sm:flex-row justify-center pt-12 my-12 sm:my-4">
@@ -291,4 +289,3 @@ permalink: /
     </div>
   </div>
 </section> #}
-
