--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -23,7 +23,7 @@ eleventyNavigation:
   </svg>
 
   <!--Titled section-->
-  <section class="bg-white border-b py-4 flex">
+  <section class="bg-white py-8 flex">
     <div class="container max-w-5xl mx-auto">
       <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800 m-auto">
         About LaunchLead Ltd
@@ -33,7 +33,7 @@ eleventyNavigation:
         Our design allows for the ball to be thrown up to 50 meters while reducing the stress on your shoulders.
       </p>
 
-      <div class="w-full mb-4">
+      <div class="w-full mb-8">
         <div class="h-1 mx-auto gradient w-64 my-0 py-0 rounded-t"></div>
       </div>
 
@@ -60,7 +60,7 @@ eleventyNavigation:
           <img src="/img/luna-blue-leaves-crop.jpg">
         </div>
 
-        <div class="w-full sm:w-1/2 p-6 mt-6">
+        <div class="w-full sm:w-1/2 p-6">
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Luna settled in</h3>
             <p class="text-gray-600">
@@ -94,7 +94,7 @@ eleventyNavigation:
         </div>
 
 
-        <div class="w-full sm:w-1/2 p-6 mt-6">
+        <div class="w-full sm:w-1/2 p-6">
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">The prototypes</h3>
             <p class="text-gray-600">
