--- a/src/pages/unleash.njk
+++ b/src/pages/unleash.njk
@@ -23,13 +23,13 @@ eleventyNavigation:
   </svg>
 
   <!--Titled section-->
-  <section class="bg-white py-4 flex">
+  <section class="bg-white py-8 flex">
     <div class="container max-w-5xl mx-auto">
       <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
         How to throw
       </h2>
 
-      <div class="w-full mb-4">
+      <div class="w-full mb-8">
         <div class="h-1 mx-auto gradient w-64 my-0 py-0 rounded-t"></div>
       </div>
 
@@ -59,7 +59,7 @@ eleventyNavigation:
         Step by step tutorial
       </h2>
 
-      <div class="w-full mb-4 mt-4">
+      <div class="w-full mb-8 mt-4">
         <div class="h-1 mx-auto gradient w-64 my-0 py-0 rounded-t"></div>
       </div>
 
@@ -70,7 +70,7 @@ eleventyNavigation:
           <img src="/img/luna-blue-leaves-crop.jpg">
         </div>
 
-        <div class="w-full sm:w-1/2 p-6 mt-6">
+        <div class="w-full sm:w-1/2 p-6">
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Step One</h3>
             <p class="text-gray-600">
@@ -106,7 +106,7 @@ eleventyNavigation:
           <img src="/img/luna-blue-leaves-crop.jpg">
         </div>
 
-        <div class="w-full sm:w-1/2 p-6 mt-6">
+        <div class="w-full sm:w-1/2 p-6">
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Step Three</h3>
             <p class="text-gray-600">
