Add layout corrections

--- a/src/index.njk
+++ b/src/index.njk
@@ -9,10 +9,10 @@ permalink: /
 
 <!--Hero-->
 <div class="pt-24">
-  <div class="container px-4 mx-auto flex flex-wrap flex-col lg:flex-row items-center">
+  <div class="container px-16 mx-auto flex flex-wrap flex-col lg:flex-row items-center">
 
     <!--Left Col-->
-    <div class="lg:pl-4 flex flex-col w-full lg:w-2/4 justify-center items-start text-center lg:text-left">
+    <div class="lg:px-8 lg:pl-14 flex flex-col w-full lg:w-2/4 justify-center items-start text-center lg:text-left">
       {# <p class="uppercase tracking-loose w-full">Unleash the fun</p> #}
       <h1 class="w-full my-4 text-4xl font-bold leading-tight text-center lg:text-left">
         A dog lead &amp; ball thrower in one!
@@ -26,7 +26,7 @@ permalink: /
         <li>Leave the ball thrower at home</li>
       </ul>
 
-      <p class="mb-8 w-full max-w-md m-auto">
+      <p class="mb-8 w-full m-auto">
         <strong>About</strong>
       </br>
         The Launchlead is a dog lead that can throw a tennis ball up to 50 meters, reduce should stress and let you play more with your furry friend.
@@ -92,7 +92,7 @@ permalink: /
 
     <div class="flex flex-wrap flex-col-reverse md:flex-row">
       <div class="w-full md:w-1/2 pt-0 sm:p-6 mt-0 sm:mt-6 items-center text-center px-16">
-        <img class="w-fit opacity-70 m-auto" src="/img/no-ball-thrower-needed.png" style="max-width: 300px;">
+        <img class="w-fit opacity-70 m-auto" src="/img/no-ball-thrower-needed.png" style="max-width: 264px;">
       </div>
 
       <div class="w-full md:w-1/2 p-6 mt-6">
