--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -29,13 +29,13 @@
       See it in action or head to Amazon?
     </h3>
 
-    <a href="/unleash" class="mx-auto mr-4 lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+    <a href="/unleash" class="mr-4 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
       How to use it
     </a>
 
-    <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+    <a class="mx-auto lg:mx-0  ml-4 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
       Amazon
-    </button>
+    </a>
   </section>
 
 <!--Footer-->
