--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -55,7 +55,7 @@
       lg:p-0
       z-20"
       id="nav-content">
-      <ul class="list-reset lg:flex justify-end flex-1 items-center" id='navLinks'>
+      <ul class="list-reset lg:flex justify-end flex-1 items-center mr-4" id='navLinks'>
 
         {% for entry in navPages %}
             <li class="text-right">
