Add basic cintent and images

--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -25,8 +25,8 @@
       <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
     </div>
 
-    <h3 class="my-4 text-3xl leading-tight">
-      See it in action or head to Amazon?
+    <h3 class="my-4 text-3xl leading-tight pb-4">
+      See it in action or ready to buy?
     </h3>
 
     <a href="/unleash" class="mr-4 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -34,18 +34,18 @@
     </a>
 
     <a class="mx-auto lg:mx-0  ml-4 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-      Amazon
+      Buy now
     </a>
   </section>
 
 <!--Footer-->
 <footer class="bg-white">
-  <div class="container mx-auto px-8">
+  <div class="container mx-auto px-8 lg:pl-32">
     <div class="w-full flex flex-col md:flex-row py-6">
       <div class="flex-1 mb-6 text-black">
-        <a class="no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="/">
+        <a class="no-underline hover:no-underline font-bold text-2xl lg:text-4xl mx-auto" href="/">
 
-          <svg id="navLogoBlue" class="w-64  pr-12" xmlns="http://www.w3.org/2000/svg"xmlns:xlink="http://www.w3.org/1999/xlink"style="isolation:isolate"viewBox="0.5 102.033 487 96.935">
+          <svg id="navLogoBlue" class="w-64 mx-auto" xmlns="http://www.w3.org/2000/svg"xmlns:xlink="http://www.w3.org/1999/xlink"style="isolation:isolate"viewBox="0.5 102.033 487 96.935">
             <defs>
               <clipPath id="_clipPath_rSqfKnJwWJEk1yHAUC0XxKX1hUajXuUU"><rect x="0.5"y="102.033"width="487"height="96.935"/></clipPath>
             </defs>
@@ -55,12 +55,22 @@
 
         </a>
       </div>
-
-      <div class="flex-1">
+      <div class="flex-1 text-center">
         <ul class="list-reset mb-6">
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Amazon</a>
+            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Abous Us</a>
           </li>
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Throwing instructions</a>
+          </li>
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Buy now</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="flex-1 text-center">
+        <ul class="list-reset mb-6">
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
             <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Facebook</a>
           </li>
@@ -70,29 +80,17 @@
         </ul>
       </div>
 
-      <div class="flex-1">
+      <div class="flex-1 text-center">
         <ul class="list-reset mb-6">
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
             <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Instgram</a>
           </li>
-          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+          {# <li class="mt-2 inline-block mr-2 md:block md:mr-0">
             <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Pintrest</a>
-          </li>
+          </li> #}
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
             <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Twitter</a>
           </li>
-        </ul>
-      </div>
-
-      <div class="flex-1">
-        <ul class="list-reset mb-6">
-          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Abous Us</a>
-          </li>
-          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Throwing instructions</a>
-          </li>
-
         </ul>
       </div>
     </div>
