--- a/src/pages/unleash.njk
+++ b/src/pages/unleash.njk
@@ -34,7 +34,7 @@ eleventyNavigation:
       </div>
 
       {# text left #}
-      <div class="flex flex-wrap">
+      {# <div class="flex flex-wrap">
         <div class="sm:w-1/2 p-6">
           <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
             Watch the tutorial
@@ -53,7 +53,7 @@ eleventyNavigation:
             <iframe class="video" style="aspect-ratio: 16 / 9; width: 100%;" src="https://www.youtube.com/embed/msizPweg3kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
           </div>
         </div>
-      </div>
+      </div> #}
 
       <h2 class="w-full mt-12 mb-2 text-4xl font-bold leading-tight text-center text-gray-800">
         Step by step tutorial
@@ -74,8 +74,24 @@ eleventyNavigation:
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Step One</h3>
             <p class="text-gray-600">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
-            </p>
+Pick which hand you want to throw with. 
+
+Place the heavy metal hook in the palm of your hand with the lead between your index finger and middle finger. 
+OR
+The finger loop can be found where the metal hook connects to the lead. The loop has been enlarged to allow you to sucurly hold onto the lead. Push you middle finger through the finger loop.
+
+Let the rest of the lead hang down behind your hand.
+
+Close your fingers around the metal hook. Forming a fist with the hook inside and your thumb pointing up :thumbsup
+Do not let go of the metal hook when throwing the ball. Your fist must remain closed at all times.
+
+Notice that with your fist closed you can open and close your thumb like a pincer. Take a moment to get use to this movement. Once comfortable open your pincer by raising your thumb. Place the padded handle between your thumb and fist and close your thumb to hold the handle in place.
+
+With your free hand place the tennis ball in the cradle. Ensure it is firmly in place.
+
+Aim in the direction you want the ball to go. Spin the ball and lead in an underarm motion. The harder you spin, the further the ball will go. 
+
+To release the ball, keep your fist clenched around the metal hook and lift up your thumb to release the pincer on the handle.            </p>
           </div>
         </div>
       </div>
