--- a/src/pages/unleash.njk
+++ b/src/pages/unleash.njk
@@ -63,35 +63,21 @@ eleventyNavigation:
         <div class="h-1 mx-auto gradient w-64 my-0 py-0 rounded-t"></div>
       </div>
 
-
       {# text right #}
       <div class="flex flex-wrap flex-col-reverse sm:flex-row">
         <div class="w-full sm:w-1/2 p-6">
-          <img src="/img/luna-blue-leaves-crop.jpg">
+          <img src="/img/step-1.jpg">
         </div>
 
         <div class="w-full sm:w-1/2 p-6">
           <div class="align-middle">
-            <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Step One</h3>
+            <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+              Step One
+            </h3>
             <p class="text-gray-600">
-Pick which hand you want to throw with. 
-
-Place the heavy metal hook in the palm of your hand with the lead between your index finger and middle finger. 
-OR
-The finger loop can be found where the metal hook connects to the lead. The loop has been enlarged to allow you to sucurly hold onto the lead. Push you middle finger through the finger loop.
-
-Let the rest of the lead hang down behind your hand.
-
-Close your fingers around the metal hook. Forming a fist with the hook inside and your thumb pointing up :thumbsup
-Do not let go of the metal hook when throwing the ball. Your fist must remain closed at all times.
-
-Notice that with your fist closed you can open and close your thumb like a pincer. Take a moment to get use to this movement. Once comfortable open your pincer by raising your thumb. Place the padded handle between your thumb and fist and close your thumb to hold the handle in place.
-
-With your free hand place the tennis ball in the cradle. Ensure it is firmly in place.
-
-Aim in the direction you want the ball to go. Spin the ball and lead in an underarm motion. The harder you spin, the further the ball will go. 
-
-To release the ball, keep your fist clenched around the metal hook and lift up your thumb to release the pincer on the handle.            </p>
+              Pick which hand you want to throw with.
+              Place the heavy metal hook in the palm of your hand with the lead between your index finger and middle finger. 
+            </p>
           </div>
         </div>
       </div>
@@ -104,31 +90,83 @@ To release the ball, keep your fist clenched around the metal hook and lift up y
           </h3>
 
           <p class="text-gray-600 text-base max-w-prose">
-            Our patented design allow for the ball to be thrown up to 50 meters. All while reducing the stress on the shoulders.
-            <br/>
-            <br/>
-            See it in action now
+            For additional safty there is a finger loop, you can use it to ensure the hook does not slip out of your hand. The finger loop can be found where the metal hook connects to the lead. The loop has been enlarged to allow you to sucurly hold onto the lead. Push you middle finger through the finger loop.
           </p>
         </div>
 
         <div class="w-full sm:w-1/2 p-6">
-          <img src="/img/luna-blue-leaves-crop.jpg">
+          <img src="/img/fingerloop-3.png">
         </div>
       </div>
 
       {# text right #}
       <div class="flex flex-wrap flex-col-reverse sm:flex-row">
         <div class="w-full sm:w-1/2 p-6">
-          <img src="/img/luna-blue-leaves-crop.jpg">
+          <img src="/img/step-2.png">
         </div>
 
         <div class="w-full sm:w-1/2 p-6">
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Step Three</h3>
             <p class="text-gray-600">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
+              Let the rest of the lead hang down behind your hand. Close your fingers around the metal hook. Forming a fist with the hook inside and your thumb pointing up.
+              Do not let go of the metal hook when throwing the ball. Your fist must remain closed at all times.
             </p>
           </div>
+        </div>
+      </div>
+
+
+      {# text left #}
+      <div class="flex flex-wrap">
+        <div class="sm:w-1/2 p-6">
+          <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+            Step Four
+          </h3>
+
+          <p class="text-gray-600 text-base max-w-prose">
+            Notice that with your fist closed you can open and close your thumb like a pincer. Take a moment to get use to this movement. Once comfortable open your pincer by raising your thumb. Place the padded handle between your thumb and fist and close your thumb to hold the handle in place.
+          </p>
+        </div>
+
+        <div class="w-full sm:w-1/2 p-6">
+          <img src="/img/step-3.png">
+        </div>
+      </div>
+
+      {# text right #}
+      <div class="flex flex-wrap flex-col-reverse sm:flex-row">
+        <div class="w-full sm:w-1/2 p-6">
+          <img src="/img/step-4.png">
+        </div>
+
+        <div class="w-full sm:w-1/2 p-6">
+          <div class="align-middle">
+            <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+              Step Five
+            </h3>
+            <p class="text-gray-600">
+              With your free hand place the tennis ball in the cradle. Ensure it is firmly in place.
+              Aim in the direction you want the ball to go. Spin the ball and lead in an underarm motion. The harder you spin, the further the ball will go. 
+            </p>
+          </div>
+        </div>
+      </div>
+
+      {# text left #}
+      <div class="flex flex-wrap">
+        <div class="sm:w-1/2 p-6">
+          <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+            Step Six
+          </h3>
+
+          <p class="text-gray-600 text-base max-w-prose">
+            To release the ball, keep your fist clenched around the metal hook and lift up your thumb to release the pincer on the handle.
+          </p>
+        </div>
+
+        <div class="w-full sm:w-1/2 p-6">
+          <img src="/img/luna-blue-leaves-crop.jpg">
         </div>
       </div>
     </div>
