--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -43,7 +43,7 @@
   <div class="container mx-auto px-8 lg:pl-32">
     <div class="w-full flex flex-col md:flex-row py-6">
       <div class="flex-1 mb-6 text-black">
-        <a class="no-underline hover:no-underline font-bold text-2xl lg:text-4xl mx-auto" href="/">
+        <a class="no-underline hover:no-underline font-bold text-2xl lg:text-4xl mx-auto" href="/home">
 
           <svg id="navLogoBlue" class="w-64 mx-auto" xmlns="http://www.w3.org/2000/svg"xmlns:xlink="http://www.w3.org/1999/xlink"style="isolation:isolate"viewBox="0.5 102.033 487 96.935">
             <defs>
