--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -1,7 +1,7 @@
 <nav id="header" class="fixed w-full z-30 top-0 text-white">
-  <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2" style="max-width: 87rem;">
+  <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 p-3" style="max-width: 87rem;">
     <div class="pl-4 flex items-center">
-      <a href="/" class="toggleColour no-underline hover:no-underline" href="#">
+      <a href="/home" class="toggleColour no-underline hover:no-underline">
         <svg id="navLogoWhite" class="w-52 lg:w-64 block" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="isolation:isolate" viewBox="69.928 102.211 487 96.935" >
           <defs>
             <clipPath id="_clipPath_Cz954Unbpz1hKNGjlgiUdgTINBv7ahFS"><rect x="69.928" y="102.211" width="487" height="96.935"/></clipPath>
