--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -58,10 +58,10 @@
       <div class="flex-1 text-center">
         <ul class="list-reset mb-6">
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Abous Us</a>
+            <a href="/about" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Abous Us</a>
           </li>
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Throwing instructions</a>
+            <a href="/unleash" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Throwing instructions</a>
           </li>
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
             <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Buy now</a>
