fix content typos

--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -78,7 +78,7 @@ eleventyNavigation:
           </h3>
 
           <p class="text-gray-600 text-base max-w-prose">
-            Unfortunatly I suffered a should injury a few months after Luna arrive. The pain was at its worst when raising my hands above shoulder height. This made it very painfull to use a traditional ball thrower. So I started experimenting with other ideas.
+            Unfortunatly I suffered a shoulder injury a few months after Luna arrive. The pain was at its worst when raising my hands above shoulder height. This made it very painfull to use a traditional ball thrower. So I started experimenting with other ideas.
           </p>
         </div>
 
@@ -98,7 +98,7 @@ eleventyNavigation:
           <div class="align-middle">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">The prototypes</h3>
             <p class="text-gray-600">
-              There were many prototypes. I used off the shelf leads at first. I'd cut different length cradles (thats the part where the tennis ball sits before it is throw) in them to see which worked best with a tennisball. I also experimented with different lenght leads. Some were glued, some were taped and some were even melted together. Eventualy I had engouh details to approach manfacturers and get samples produced. The best part being that Luna was happy to help me test each iteration.
+              There were many prototypes. I used off the shelf leads at first. I'd cut different length cradles (thats the part where the tennis ball sits before it is throw) in them to see which worked best with a tennisball. I also experimented with different length leads. Some were glued, some were taped and some were even melted together. Eventualy I had engouh details to approach manfacturers and get samples produced. The best part being that Luna was happy to help me test each iteration.
             </p>
           </div>
         </div>
