--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -33,7 +33,7 @@
       How to use it
     </a>
 
-    <a class="mx-auto lg:mx-0  ml-4 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+    <a href="https://www.amazon.co.uk/dp/B0B5S2DHV3?th=1" class="mx-auto lg:mx-0  ml-4 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
       Buy now
     </a>
   </section>
@@ -64,7 +64,7 @@
             <a href="/unleash" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Throwing instructions</a>
           </li>
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Buy now</a>
+            <a href="https://www.amazon.co.uk/dp/B0B5S2DHV3?th=1" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Buy now</a>
           </li>
         </ul>
       </div>
@@ -72,10 +72,10 @@
       <div class="flex-1 text-center">
         <ul class="list-reset mb-6">
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Facebook</a>
+            <a href="https://www.facebook.com/LaunchLeadUK" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Facebook</a>
           </li>
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Youtube</a>
+            <a href="https://www.youtube.com/channel/UCLGxMrBwrmKL55j5jNtnq3A" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Youtube</a>
           </li>
         </ul>
       </div>
@@ -83,13 +83,13 @@
       <div class="flex-1 text-center">
         <ul class="list-reset mb-6">
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Instgram</a>
+            <a href="https://www.instagram.com/launchlead/" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Instgram</a>
           </li>
-          {# <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Pintrest</a>
-          </li> #}
           <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-            <a href="#" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Twitter</a>
+            <a href="https://www.pinterest.co.uk/05q2zt2kqno7zn3o5iypsoojp31n2a/_created/" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Pintrest</a>
+          </li>
+          <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+            <a href="https://twitter.com/launchlead_uk" class="no-underline hover:underline text-gray-800 hover:text-launchlead-blue">Twitter</a>
           </li>
         </ul>
       </div>
